--- a/_config.yml
+++ b/_config.yml
@@ -2,43 +2,44 @@
 ## Docs: https://hexo.io/docs/configuration.html
 ## Source: https://github.com/hexojs/hexo/
 
+# 真正的注释应该在#后面带个空格
 # Site
-title: Hexo
-subtitle:
-description:
+title: 当时我还没吓傻                       # 网站标题
+subtitle: 一个胖程序员                      # 网站副标题
+description: 当时还没吓傻的胖程序员能干啥     # 网站描述
 keywords:
-author: John Doe
-language:
-timezone:
+author: 当时我就吓傻啦                       # 用于主题显示文章的作者
+language: zh-CN                             # 网站使用的语言
+timezone:                                   # 网站时区
 
 # URL
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
-url: http://yoursite.com
-root: /
-permalink: :year/:month/:day/:title/
-permalink_defaults:
+url: http://www.yijinshui.com/              # 网址
+root: /                                     # 网站根目录
+permalink: :year:month:day/:title/          # 文章的 永久链接 格式
+permalink_defaults:                         # 永久链接中各部分的默认值	
 
-# Directory
-source_dir: source
-public_dir: public
-tag_dir: tags
-archive_dir: archives
-category_dir: categories
-code_dir: downloads/code
-i18n_dir: :lang
-skip_render:
+# 目录
+source_dir: source                          # 资源文件夹，这个文件夹用来存放内容。
+public_dir: public                          # 公共文件夹，这个文件夹用于存放生成的站点文件
+tag_dir: tags                               # 标签文件夹
+archive_dir: archives                       # 归档文件夹
+category_dir: categories                    # 分类文件夹
+code_dir: downloads/code                    # Include code 文件夹
+i18n_dir: :lang                             # 国际化（i18n）文件夹
+skip_render:                                # 跳过指定文件的渲染，
 
-# Writing
-new_post_name: :title.md # File name of new posts
-default_layout: post
-titlecase: false # Transform title into titlecase
-external_link: true # Open external links in new tab
-filename_case: 0
-render_drafts: false
-post_asset_folder: false
-relative_link: false
-future: true
-highlight:
+# 文章
+new_post_name: :title.md                    # 新文章的文件名称
+default_layout: post                        # 预设布局
+titlecase: false                            # 把标题转换为 title case
+external_link: true                         # 在新标签中打开链接
+filename_case: 0                            # 把文件名称转换为 (1) 小写或 (2) 大写
+render_drafts: false                        # 显示草稿
+post_asset_folder: true                     # 启动 Asset 文件夹 想要更有规律地提供图片和其他资源以及想要将他们的资源分布在各个文章上设置为true
+relative_link: false                        # 把链接改为与根目录的相对位址
+future: true                                # 显示未来的文章
+highlight:                                  # 代码块的设置
   enable: true
   line_number: true
   auto_detect: false
@@ -53,29 +54,38 @@ index_generator:
   per_page: 10
   order_by: -date
   
-# Category & Tag
-default_category: uncategorized
-category_map:
-tag_map:
+# 分类 & 标签
+default_category: uncategorized             # 默认分类
+category_map:                               # 分类别名
+tag_map:                                    # 标签别名
 
-# Date / Time format
+# 日期 / 时间格式
 ## Hexo uses Moment.js to parse and display date
 ## You can customize the date format as defined in
 ## http://momentjs.com/docs/#/displaying/format/
-date_format: YYYY-MM-DD
-time_format: HH:mm:ss
+date_format: YYYY-MM-DD                     # 日期格式
+time_format: HH:mm:ss                       # 时间格式
 
-# Pagination
+# 分页
 ## Set per_page to 0 to disable pagination
-per_page: 10
-pagination_dir: page
+per_page: 10                                # 每页显示的文章量 (0 = 关闭分页功能)
+pagination_dir: page                        # 分页目录
 
 # Extensions
 ## Plugins: https://hexo.io/plugins/
 ## Themes: https://hexo.io/themes/
-theme: landscape
+theme: landscape                            # 当前主题名称。值为false时禁用主题
 
-# Deployment
+# 扩展
 ## Docs: https://hexo.io/docs/deployment.html
-deploy:
-  type:
+deploy:                                     # 部署部分的设置 
+  type: sftp                                # 使用SFTP方式发布 
+  host: 120.27.69.65                        # 远程主机的地址 
+  user: root                                # 使用者名称 
+  pass:                         # 密码 
+  remotePath: /home/www                     # 远程主机的根目录 
+  port: 22                                  # 端口 
+  privateKey:                               # ssh私钥的目录地址 
+  passphrase:                               # (可省略）ssh私钥的密码短语	 
+  agent: $SSH_AUTH_SOCK                     # ssh套接字的目录地址 默认$SSH_AUTH_SOCK
+
