--- a/_config.yml
+++ b/_config.yml
@@ -33,7 +33,10 @@ skip_render:                                # 跳过指定文件的渲染，
 new_post_name: :title.md                    # 新文章的文件名称
 default_layout: post                        # 预设布局
 titlecase: false                            # 把标题转换为 title case
-external_link: true                         # 在新标签中打开链接
+external_link:				    # 在新标签中打开链接			    
+  enable: true # Open external links in new tab
+  field: site # Apply to the whole site
+  exclude: ''                         
 filename_case: 0                            # 把文件名称转换为 (1) 小写或 (2) 大写
 render_drafts: false                        # 显示草稿
 post_asset_folder: true                     # 启动 Asset 文件夹 想要更有规律地提供图片和其他资源以及想要将他们的资源分布在各个文章上设置为true
@@ -43,7 +46,9 @@ highlight:                                  # 代码块的设置
   enable: true
   line_number: true
   auto_detect: false
-  tab_replace:
+  tab_replace: ''
+  wrap: true
+  hljs: false
   
 # Home page setting
 # path: Root path for your blogs index page. (default = '')
@@ -59,17 +64,29 @@ default_category: uncategorized             # 默认分类
 category_map:                               # 分类别名
 tag_map:                                    # 标签别名
 
+# Metadata elements
+## https://developer.mozilla.org/en-US/docs/Web/HTML/Element/meta
+meta_generator: true
+
 # 日期 / 时间格式
 ## Hexo uses Moment.js to parse and display date
 ## You can customize the date format as defined in
 ## http://momentjs.com/docs/#/displaying/format/
 date_format: YYYY-MM-DD                     # 日期格式
 time_format: HH:mm:ss                       # 时间格式
+## Use post's date for updated date unless set in front-matter
+use_date_for_updated: false
 
 # 分页
 ## Set per_page to 0 to disable pagination
 per_page: 10                                # 每页显示的文章量 (0 = 关闭分页功能)
 pagination_dir: page                        # 分页目录
+
+# Include / Exclude file(s)
+## include:/exclude: options only apply to the 'source/' folder
+include:
+exclude:
+ignore:
 
 # Extensions
 ## Plugins: https://hexo.io/plugins/
