--- a/package.json
+++ b/package.json
@@ -7,24 +7,23 @@
     "2.hexo-init": "npm install hexo init",
     "version": "hexo version",
     "clean": "hexo clean",
-    "generate":"hexo generate",
-    "preview-server":"hexo generate && hexo server --ip 127.0.0.1 --port 4001 --log",
+    "server": "hexo server",
     "install-sftp": "npm install hexo-deployer-sftp --save",
     "deploy": "hexo deploy"
   },
   "hexo": {
-    "version": "3.8.0"
+    "version": "4.2.0"
   },
   "dependencies": {
-    "hexo": "^3.8.0",
+    "hexo": "^4.2.0",
     "hexo-deployer-sftp": "^0.1.0",
-    "hexo-generator-archive": "^0.1.5",
-    "hexo-generator-category": "^0.1.3",
-    "hexo-generator-index": "^0.2.1",
-    "hexo-generator-tag": "^0.2.0",
-    "hexo-renderer-ejs": "^0.3.1",
-    "hexo-renderer-marked": "^1.0.1",
-    "hexo-renderer-stylus": "^0.3.3",
-    "hexo-server": "^0.3.3"
+    "hexo-generator-archive": "^1.0.0",
+    "hexo-generator-category": "^1.0.0",
+    "hexo-generator-index": "^1.0.0",
+    "hexo-generator-tag": "^1.0.0",
+    "hexo-renderer-ejs": "^1.0.0",
+    "hexo-renderer-marked": "^2.0.0",
+    "hexo-renderer-stylus": "^1.1.0",
+    "hexo-server": "^1.0.0"
   }
 }
