--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "private": true,
   "scripts": {
     "1.2.命令只执行一次 之后不要在执行":"",
+    "本地预览执行server": "",
+    "发布命令执行deploy": "",
     "1.install-hexo-cli": "npm install -g hexo-cli",
     "2.hexo-init": "npm install hexo init",
     "3.install-sftp": "npm install hexo-deployer-sftp --save",
