修改标题头和域名备案信息

--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@
 
 # 真正的注释应该在#后面带个空格
 # Site
-title: 当时我还没吓傻                       # 网站标题
+title: 个人生活精彩                       # 网站标题
 subtitle: 一个胖程序员                      # 网站副标题
 description: 当时还没吓傻的胖程序员能干啥     # 网站描述
 keywords:
