--- a/_config.yml
+++ b/_config.yml
@@ -4,9 +4,9 @@
 
 # 真正的注释应该在#后面带个空格
 # Site
-title: 一个胖程序员                       # 网站标题
-subtitle: 一个胖程序员                      # 网站副标题
-description: 当时还没吓傻的胖程序员能干啥     # 网站描述
+title: 一个胖程序猿                       # 网站标题
+subtitle: 一个胖程序猿                      # 网站副标题
+description: 当时还没吓傻的胖程序猿能干啥     # 网站描述
 keywords:
 author: 当时我就吓傻啦                       # 用于主题显示文章的作者
 language: zh-CN                             # 网站使用的语言
